only restart at end of game

--- a/riverplane/index.html
+++ b/riverplane/index.html
@@ -1,16 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Corridor Shooter</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+<style>
+#gameContainer {
+    position: relative;
+    aspect-ratio: 1;
+    width: 100%;
+    max-width: 100vmin;
+}
+
+@media (orientation: landscape) {
+    #gameContainer {
+        max-width: 50vw;
+    }
+}
+
+#gameCanvas {
+    width: 100%;
+    height: 100%;
+    background: #111;
+    touch-action: none;
+}
+
+@media (max-width: 768px) {
+    #gameContainer {
+        width: 100vw;
+        flex-direction: column;
+    }
+
+    canvas {
+        width: 100%;
+        height: auto;
+    }
+
+    #controls {
+        height: 150px;
+    }
+}
+
+
+</style>
     <div id="gameContainer">
         <canvas id="gameCanvas"></canvas>
     </div>
     <script type="module" src="js/main.js"></script>
-</body>
-</html>
 
