--- a/Bubbles/index.html
+++ b/Bubbles/index.html
@@ -16,6 +16,9 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-    <script type="module" src="game.js"></script>
+    <script type="module" src="index.js"></script>
+    <script>
+
+    </script>
 </body>
 </html>
