--- a/car/index.html
+++ b/car/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>3D Car Racing Game</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
         body {
@@ -90,13 +91,13 @@
     <div id="game-container">
         <canvas id="gameCanvas"></canvas>
         <div id="hud">
-            <div class="hud-item">⏱️ <span id="timeValue">0</span>s</div>
-            <div class="hud-item">🏆 <span id="scoreValue">0</span></div>
-            <div class="hud-item">🔄 <span id="lapValue">0</span></div>
-            <div class="hud-item">⏲️ <span id="lastLapValue">-</span></div>
-            <div class="hud-item">🏅 <span id="bestLapValue">-</span></div>
+            <div class="hud-item">⏱️ Time: <span id="timeValue">0</span>s</div>
+            <div class="hud-item">🏆 Score: <span id="scoreValue">0</span></div>
+            <div class="hud-item">🔄 Lap: <span id="lapValue">0</span></div>
+            <div class="hud-item">⏲️ Last: <span id="lastLapValue">-</span></div>
+            <div class="hud-item">🏅 Best: <span id="bestLapValue">-</span></div>
         </div>
-        <div id="controls">🏎️</div>
+        <div id="controls">🎮</div>
     </div>
     <script type="module" src="game.js"></script>
 </body>
