Lives and Score

--- a/Hero/index.html
+++ b/Hero/index.html
@@ -102,8 +102,9 @@
     <div id="game-container">
         <canvas id="gameCanvas"></canvas>
         <div id="hud">
-            <div id="fuel"></div>
-            <div id="score"></div>
+            <div id="lives">❤️ Lives: 10</div>
+            <div id="fuel">⛽ Fuel: 100</div>
+            <div id="score">💎 Score: 0</div>
             <div id="level"></div>
         </div>
     </div>
