--- a/Hero/index.html
+++ b/Hero/index.html
@@ -7,13 +7,18 @@
     <title>H.E.R.O.</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<style>
+    .hud {
+        display: flex;
+    }
+</style>
 <body>
     <div id="game-container">
         <canvas id="gameCanvas"></canvas>
         <div id="hud">
-            <div id="lives">❤️ Lives: 10</div>
-            <div id="fuel">⛽ Fuel: 100</div>
-            <div id="score">💎 Score: 0</div>
+            <div id="lives">❤️ 10</div>
+            <div id="fuel">⛽ 100</div>
+            <div id="score">💎 0</div>
             <div id="level"></div>
         </div>
     </div>
