Falafel Jump: moving platform

--- a/flappy/index.html
+++ b/flappy/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Jumpy Fallafel</title>
+    <title>Jumpy McFlapFace</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
                 <div class="info">Level: <span id="game-level">1</span></div>
             </div>
             <div id="start-screen">
-                <h1>Flappy Bird</h1>
+                <h1>Jumpy McFlapFace</h1>
                 <p>Choose your difficulty or press Space to start.</p>
                 <div id="difficulty-buttons">
                     <button id="easy">Easy</button>
