Slow motion + Fixed end screen

--- a/flappy/index.html
+++ b/flappy/index.html
@@ -10,10 +10,6 @@
     <div id="game-container">
         <canvas id="game-canvas"></canvas>
         <div id="ui">
-            <div id="game-ui" style="display: none;">
-                <div class="info">Score: <span id="game-score">0</span></div>
-                <div class="info">Level: <span id="game-level">1</span></div>
-            </div>
             <div id="start-screen">
                 <h1>Jumpy McFlapFace</h1>
                 <p>Choose your difficulty or press Space to start.</p>
@@ -26,8 +22,8 @@
             </div>
             <div id="game-over-screen" style="display: none;">
                 <h1>Game Over</h1>
-                <p>Score: <span id="score">0</span></p>
-                <p>Level: <span id="level">1</span></p>
+                <p>💰 <span id="score">0</span></p>
+                <p>📈 <span id="level">1</span></p>
                 <p class="high-score">High Score: <span id="high-score-end">0</span></p>
                 <button id="restart">Restart</button>
             </div>
