Falafel Jump: help scren

--- a/flappy/index.html
+++ b/flappy/index.html
@@ -39,10 +39,10 @@
             <p>Click ❤️ to pause, and 📈 to restart.</p>
             <h3>Power-ups</h3>
             <ul class="powerup-list">
-                <li>💎: +10 points</li>
-                <li>🛡️: Temporary shield</li>
-                <li>🕒: Slows down time</li>
-                <li>🪶: Shrinks the bird</li>
+                <li><span class="collectible-icon" style="background: linear-gradient(145deg, #a9fffd, #00c2ff);">💎</span>: +10 points</li>
+                <li><span class="collectible-icon" style="background: linear-gradient(145deg, #8e44ad, #9b59b6);">🛡️</span>: Temporary shield</li>
+                <li><span class="collectible-icon" style="background: linear-gradient(145deg, #f1c40f, #f39c12);">🕒</span>: Slows down time</li>
+                <li><span class="collectible-icon" style="background: linear-gradient(145deg, #2ecc71, #27ae60);">🪶</span>: Shrinks the bird</li>
             </ul>
         </div>
     </div>
