--- a/flappy/index.html
+++ b/flappy/index.html
@@ -37,12 +37,21 @@
             <h2>How to Play</h2>
             <p>Click, tap, or press <strong>Space/Enter</strong> to make Jumpy flap his wings!</p>
             <p>Click ❤️ to pause, and 📈 to restart.</p>
+            <h3>Obstacles</h3>
+            <ul class="powerup-list">
+                <li>Pipes: Standard vertical obstacles.</li>
+                <li>Spinners: Rotating hazards with gaps.</li>
+                <li>Crushers: Vertical blocks that open and close.</li>
+                <li>Moving Platforms: Platforms that move up and down.</li>
+                <li>Swinging Pendulums: Swinging balls to avoid.</li>
+            </ul>
             <h3>Power-ups</h3>
             <ul class="powerup-list">
                 <li><span class="collectible-icon" style="background: linear-gradient(145deg, #a9fffd, #00c2ff);">💎</span>: +10 points</li>
                 <li><span class="collectible-icon" style="background: linear-gradient(145deg, #8e44ad, #9b59b6);">🛡️</span>: Temporary shield</li>
                 <li><span class="collectible-icon" style="background: linear-gradient(145deg, #f1c40f, #f39c12);">🕒</span>: Slows down time</li>
                 <li><span class="collectible-icon" style="background: linear-gradient(145deg, #2ecc71, #27ae60);">🪶</span>: Shrinks the bird</li>
+                <li><span class="collectible-icon" style="background: linear-gradient(145deg, #ff6b6b, #ee5253);">✖️</span>: Score Multiplier</li>
             </ul>
         </div>
     </div>
