--- a/flappy/index.html
+++ b/flappy/index.html
@@ -19,6 +19,10 @@
                     <button id="hard">Hard</button>
                 </div>
                 <p class="high-score">High Score: <span id="high-score-start">0</span></p>
+                <div class="sound-toggle">
+                    <input type="checkbox" id="sound-checkbox">
+                    <label for="sound-checkbox">Enable Sound</label>
+                </div>
                 <button id="help-btn-start" class="help-btn">? Help</button>
             </div>
             <div id="game-over-screen" style="display: none;">
