--- a/miner/index.html
+++ b/miner/index.html
@@ -19,7 +19,10 @@
     <script src="constants.js"></script>
     <script src="levels.js"></script>
     <script src="player.js"></script>
-    <script src="enemy.js"></script>
+    <script src="horizontalEnemy.js"></script>
+    <script src="verticalEnemy.js"></script>
+    <script src="complexEnemy.js"></script>
+    <script src="hazard.js"></script>
     <script src="level.js"></script>
     <script src="game.js"></script>
 
