--- a/miner/index.html
+++ b/miner/index.html
@@ -22,6 +22,7 @@
     <script src="horizontalEnemy.js"></script>
     <script src="verticalEnemy.js"></script>
     <script src="complexEnemy.js"></script>
+    <script src="gooseEnemy.js"></script>
     <script src="hazard.js"></script>
     <script src="level.js"></script>
     <script src="game.js"></script>
