--- a/miner/index.html
+++ b/miner/index.html
@@ -23,6 +23,7 @@
     <script src="verticalEnemy.js"></script>
     <script src="complexEnemy.js"></script>
     <script src="gooseEnemy.js"></script>
+    <script src="sealEnemy.js"></script>
     <script src="hazard.js"></script>
     <script src="level.js"></script>
     <script src="game.js"></script>
