--- a/miner/index.html
+++ b/miner/index.html
@@ -24,6 +24,7 @@
     <script src="complexEnemy.js"></script>
     <script src="gooseEnemy.js"></script>
     <script src="sealEnemy.js"></script>
+    <script src="dinosaurEnemy.js"></script>
     <script src="hazard.js"></script>
     <script src="level.js"></script>
     <script src="game.js"></script>
