Enhanced 6 Levels, fixed vertical enemy, by default freefall

--- a/miner/index.html
+++ b/miner/index.html
@@ -16,18 +16,7 @@
         <input type="checkbox" id="soundToggle">
     </div>
 
-    <script src="constants.js"></script>
-    <script src="levels.js"></script>
-    <script src="player.js"></script>
-    <script src="horizontalEnemy.js"></script>
-    <script src="verticalEnemy.js"></script>
-    <script src="complexEnemy.js"></script>
-    <script src="gooseEnemy.js"></script>
-    <script src="sealEnemy.js"></script>
-    <script src="dinosaurEnemy.js"></script>
-    <script src="hazard.js"></script>
-    <script src="level.js"></script>
-    <script src="game.js"></script>
+    <script src="main.js"></script>
 
     <!-- Audio Elements -->
     <audio id="titleMusic" src="sounds/blue_danube.mp3" loop preload="none"></audio>
