Streched level, resize, mobile

--- a/Kong/index.html
+++ b/Kong/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Donkey Kong</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
   <canvas id="gameCanvas"></canvas>
@@ -13,5 +14,6 @@
   <script src="barrels.js" type="module"></script>
   <script src="graphics.js" type="module"></script>
   <script src="game.js" type="module"></script>
+  <script src="ui.js" type="module"></script>
 </body>
 </html>
