--- a/Kong/index.html
+++ b/Kong/index.html
@@ -7,13 +7,6 @@
 </head>
 <body>
   <canvas id="gameCanvas"></canvas>
-  <script src="player.js" type="module"></script>
-  <script src="input.js" type="module"></script>
-  <script src="renderer.js" type="module"></script>
-  <script src="levels.js" type="module"></script>
-  <script src="barrels.js" type="module"></script>
-  <script src="graphics.js" type="module"></script>
-  <script src="game.js" type="module"></script>
-  <script src="ui.js" type="module"></script>
+  <script src="main.js" type="module"></script>
 </body>
 </html>
