levels are now a separate file

--- a/Chroma/index.html
+++ b/Chroma/index.html
@@ -60,6 +60,7 @@
             <button id="close-help-button">Close</button>
         </div>
     </div>
+    <script src="levels.js"></script>
 
     <script src="script.js"></script>
 </body>
