Pinball Game; not working

--- a/Pinball/editor.html
+++ b/Pinball/editor.html
@@ -23,6 +23,7 @@
     <br>
     <button id="load-button">Load Level</button>
     <button id="save-button">Save Level</button>
+    <button id="load-file-button">Load level.json</button>
   </div>
   <script src="editor.js"></script>
 </body>
