visual turn indicator

--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -9,12 +9,10 @@
 <body>
     <h1>Battleship</h1>
     <div class="game-container">
-        <div class="player-board-container">
-            <h2>Player Board</h2>
+        <div class="player-board-container" id="playerContainer">
             <canvas id="playerBoard"></canvas>
         </div>
-        <div class="computer-board-container">
-            <h2>Computer Board</h2>
+        <div class="computer-board-container hidden" id="computerContainer">
             <canvas id="computerBoard"></canvas>
         </div>
     </div>
