random shuffle button

--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -16,7 +16,10 @@
             <canvas id="computerBoard"></canvas>
         </div>
     </div>
-    <button id="startGameButton">Start Game</button>
+    <div class="controls">
+        <button id="randomizeButton">Random</button>
+        <button id="startGameButton">Start Game</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
