--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -19,6 +19,7 @@
     <div class="controls">
         <button id="randomizeButton">Random</button>
         <button id="startGameButton">Start Game</button>
+        <button id="restartButton" style="display:none">Restart</button>
     </div>
     <script src="script.js"></script>
 </body>
