Successfully multiple turns

--- a/Civ/index.html
+++ b/Civ/index.html
@@ -40,6 +40,7 @@
                 <div class="turn-group">
                     <button id="help-btn" class="premium-btn">HELP</button>
                     <div class="stat"><span class="icon">📅</span> <span id="stat-turn">Turn 1</span></div>
+                    <button id="next-unit-btn" class="premium-btn">NEXT UNIT (N)</button>
                     <button id="end-turn-btn" class="premium-btn primary">END TURN</button>
                 </div>
             </div>
